--- a/src/index.scss
+++ b/src/index.scss
@@ -146,8 +146,6 @@ body {
           .fa-hospital2 .module .nav-tabs .fa-text {
             display: none; } }
   .fa-hospital2 .hospital-info-block {
-    margin-left: -15px;
-    margin-right: -15px;
     border-bottom: 1px solid #d3d3d3;
     padding: 45px 0 65px; }
     .fa-hospital2 .hospital-info-block:before, .fa-hospital2 .hospital-info-block:after {
@@ -338,9 +336,7 @@ body {
     cursor: pointer;
     border-top: none; }
 
-main > .fa-hospital2 {
-  margin-left: -15px;
-  margin-right: -15px; }
+main > .fa-hospital2 {}
   main > .fa-hospital2:before, main > .fa-hospital2:after {
     content: " ";
     display: table; }
